<resources>
    <string name="app_name">applicationdeseb</string>
    <string name="votrenom">Votre Nom Ici</string>
    <string name="next">NEXT STEP</string>
    <string name="page3test">Testons FIREBASE</string>
    <string name="welcome">Bienvenue sur mon appli</string>
    <string name="userlogin">Adresse email</string>
    <string name="pwdlogin">Mot de passe</string>
    <string name="btlogin">LOGIN</string>
    <string name="btinscription">S\'INSCRIRE</string>
    <string name="bvninscription">INSCRIVEZ VOUS ICI</string>
    <string name="emailinscription">Votre adresse email ici</string>
    <string name="passowrdinscription">Votre mot de passe ici</string>
    <string name="sinscrireici">SINSCRIRE</string>
    <string name="revenir">REVENIR</string>
    <string name="erreur">false</string>
    <string name="letsplay">JOUER</string>
    <string name="cpttv">Ceci est Votre Score</string>
    <string name="btprof">PROFILE</string>
    <string name="loading">Chargement en cours...</string>
    <string name="usernameupdate">Entrez votre pseudo</string>
    <string name="changeremail">Nouveau email</string>
    <string name="mettreajour">Mettre a jour</string>
    <string name="btrep1">Q1</string>
    <string name="btrep2">Q2</string>
    <string name="btrep3">Q3</string>
    <string name="btrep4">Q4</string>
    <string name="btactualiser">ACTUALISER</string>
    <string name="btretourpage1">RETOUR</string>
    <string name="btverifemail">VERIFIER EMAIL</string>
    <string name="btdeconec">DECONNECTER</string>
    <string name="motdepasseoublie">Effacer mon compte (login avant)</string>
</resources>