<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="cursive"
        android:importantForAutofill="no"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="43sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nomuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="43sp"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/userlogin"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/pwdlogin"
        android:importantForAutofill="no"
        android:inputType="number|text"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/bt_login"
        android:text="@string/btlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rounded_rectangle"
        android:focusable="true"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/oubliepwd"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motdepasseoublie" />

    <Button
        android:id="@+id/btinscription"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btinscription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>