<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="cursive"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="38sp"
        android:textStyle="bold"
        android:text="@string/bvninscription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="144dp" />

    <EditText
        android:id="@+id/textView2"
        android:hint="@string/emailinscription"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center|center_horizontal|center_vertical"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <EditText
        android:id="@+id/textView3"
        android:hint="@string/passowrdinscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number|text"
        android:textAlignment="center"
        android:textSize="24sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button"
        android:text="@string/btinscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rounded_rectangle"
        android:focusable="true"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <Button
        android:id="@+id/loginback"
        android:text="@string/btlogin"
        android:textSize="24sp"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
