<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LQLoading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/LQLoading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/LQLoading2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LQQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvenonce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="cursive"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/letsplay"
            android:visibility="visible" />

        <Button
            android:id="@+id/btrep1"
            android:text="@string/btrep1"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_rectangle"
            android:focusable="true"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            />

        <Button
            android:id="@+id/btrep2"
            android:text="@string/btrep2"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_rectangle"
            android:focusable="true"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            />

        <Button
            android:id="@+id/btrep3"
            android:text="@string/btrep3"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_rectangle"
            android:focusable="true"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            />

        <Button
            android:id="@+id/btrep4"
            android:text="@string/btrep4"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_rectangle"
            android:focusable="true"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="25dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            />

        <TextView
            android:id="@+id/nomuserfinal"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="cursive"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvautre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="cursive"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:hint="@string/cpttv"
            android:visibility="visible"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>